--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    androdxCoreVersion = '1.2.0'
+    androidxVersion = '1.1.0'
+    lifecycle_version = '2.2.0'
+    coroutine_version = '1.3.3'
+}
