--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
 
     /*dataBinding {
         enabled = true
@@ -42,6 +50,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
+    // WorkManager
+    implementation 'androidx.work:work-runtime-ktx:2.3.2'
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -51,6 +62,5 @@ dependencies {
 //    kapt 'com.android.databinding:compiler:3.2.0-alpha10'
 
     // Design
-    implementation 'com.google.android.material:material:1.2.0-alpha04'
-
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
 }
