--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.stacktivity.yandeximagesearchengine"
         minSdkVersion 23
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 3
         versionName "0.3"
 
@@ -22,6 +22,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -31,9 +32,6 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
-    /*buildFeatures{
-        dataBinding = true
-    }*/
 }
 
 dependencies {
@@ -41,19 +39,21 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$androdxCoreVersion"
     implementation "androidx.appcompat:appcompat:$androidxVersion"
-    implementation "androidx.preference:preference:$androidxVersion"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
-    implementation "androidx.recyclerview:recyclerview:$androidxVersion"
+    implementation "androidx.preference:preference-ktx:$preferenceVersion"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+    // Design
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     // Gif
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.20'
 
-    //Coroutines
+    // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
-
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
