--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.70"
-    ext.gradle_version = "4.0.0-beta01"
+    ext.kotlin_version = "1.4.10"
+    ext.gradle_version = '4.2.0-alpha13'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "com.android.tools.build:gradle:${gradle_version}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,8 +27,9 @@ task clean(type: Delete) {
 }
 
 ext {
-    androdxCoreVersion = '1.2.0'
-    androidxVersion = '1.1.0'
+    androdxCoreVersion = '1.3.1'
+    androidxVersion = '1.2.0'
+    preferenceVersion = '1.1.1'
     lifecycle_version = '2.2.0'
-    coroutine_version = '1.3.3'
+    coroutine_version = '1.3.7'
 }
