--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.10"
-    ext.gradle_version = '4.2.0-alpha15'
+    ext.kotlin_version = "1.4.20"
+    ext.gradle_version = '4.2.0-alpha16'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${gradle_version}"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -31,5 +31,5 @@ ext {
     androidxVersion = '1.2.0'
     preferenceVersion = '1.1.1'
     lifecycle_version = '2.2.0'
-    coroutine_version = '1.3.7'
+    coroutine_version = '1.3.8'
 }
