--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.20"
-    ext.gradle_version = '4.2.0-alpha16'
+    ext.gradle_version = '4.2.0-beta01'
     repositories {
         google()
         jcenter()
