--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.20"
-    ext.gradle_version = '4.2.0-beta01'
+    ext.kotlin_version = "1.4.32"
+    ext.gradle_version = '4.2.1'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
@@ -18,7 +18,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -30,6 +30,5 @@ ext {
     androdxCoreVersion = '1.3.2'
     androidxVersion = '1.2.0'
     preferenceVersion = '1.1.1'
-    lifecycle_version = '2.2.0'
-    coroutine_version = '1.3.8'
+    coroutine_version = '1.4.1'
 }
