--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.stacktivity.yandeximagesearchengine"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 7
-        versionName "0.4.8"
+        versionCode 12
+        versionName "0.5.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -54,4 +54,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.8.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 //    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    // Arguments Delegates
+    implementation 'com.tunjid.androidx:core:1.3.2'
+
 }
